devops/k8s/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-site
  labels:
    app: hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
        - name: hello-world-site
          image: quay.io/branic/hello_world:latest
          ports:
            - containerPort: 8000
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 64Mi
