devops/k8s/route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-world
  labels:
    app: hello-world
spec:
  host: hello-world.apps.jeffdemo.uoiz.p1.openshiftapps.com
  port:
    targetPort: 8080
  to:
    kind: Service
    name: hello-world
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
